@@ -34,7 +34,7 @@
         CSV Payments Proof of Concept project for Spring Boot
     </description>
     <properties>
-        <java.version>19</java.version>
+        <java.version>20</java.version>
     </properties>
 
     <dependencies>
@@ -75,6 +75,17 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>20</source>
+                    <target>20</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
